--- a/css/create-new-campground.css
+++ b/css/create-new-campground.css
@@ -1,41 +1,41 @@
 *{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.main-logo{
+#main-logo{
     margin-left: 10em;
     margin-top: 3em;
 }
-.home{
+#home{
     color:grey;
     font-size: 18px;
     font-weight: 500;
     margin-left: 18em;
     margin-top: -1.6em;
 }
-.johndoe{
+#johndoe{
     color: grey;
     font-weight: 700;
     font-size: 18px;
     margin-left: 57em;
     margin-top: -2em;
 }
-.logout{
+#logout{
     color: grey;
     font-weight: 400;
     font-size: 18px;
     margin-left: 65em;
     margin-top: -2.4em;
 }
-.add-new-campground{
+#add-new-campground{
     margin-left: 12em;
 }
-.campground-name{
+#campground-name{
     color: grey;
     font-size: 18px;
     font-weight: 500;
     margin-left: 26.5em;
 }
-.campground-name-input{
+#campground-name-input{
     border-radius: 0.2em;
     border: 1px solid rgb(231, 227, 227);
     background-color: rgb(231, 227, 227);
@@ -49,7 +49,7 @@
     font-size: 16px;
     padding-left: 1em;
 }
-.price{
+#price{
     color: grey;
     font-size: 18px;
     font-weight: 500;
@@ -57,7 +57,7 @@
     position: relative;
     top: 1.5em;
 }
-.price-input{
+#price-input{
     border-radius: 0.2em;
     border: 1px solid rgb(231, 227, 227);
     background-color: rgb(231, 227, 227);
@@ -67,7 +67,7 @@
     outline: none;
     margin-top: 1em;
 }
-.image{
+#image{
     color: grey;
     font-size: 18px;
     font-weight: 500;
@@ -75,7 +75,7 @@
     position: relative;
     top: 1.5em;
 }
-.image-input{
+#image-input{
     border-radius: 0.2em;
     border: 1px solid rgb(231, 227, 227);
     background-color: rgb(231, 227, 227);
@@ -85,7 +85,7 @@
     outline: none;
     margin-top: 1em;
 }
-.description{
+#description{
     color: grey;
     font-size: 18px;
     font-weight: 500;
@@ -93,7 +93,7 @@
     position: relative;
     top: 1.5em;
 }
-.description-input{
+#description-input{
     border-radius: 0.2em;
     border: 1px solid rgb(231, 227, 227);
     background-color: rgb(231, 227, 227);
@@ -103,7 +103,7 @@
     outline: none;
     margin-top: 1em;
 }
-.create-campground-button{
+#create-campground-button{
     border-radius: 0.2em;
     width: 31.5em;
     height: 3em;
@@ -114,7 +114,7 @@
     margin-left: 26.5em;
     margin-top: 1em;
 }
-.create-campground-button:hover{
+#create-campground-button:hover{
     background-color: black;
     color: white;
     border: 2px solid black;
@@ -123,7 +123,112 @@
     transition-duration: 0.5s;
 
 }
-.main-logo-2{
+#main-logo-2{
     margin-left: 10em;
     margin-top: 3em;
+}
+#hamMenu{
+    cursor: pointer;
+}
+@media screen and (min-width:780px){
+    #hamMenu{
+        display: none;
+    }
+}
+@media screen and (max-width:460px){
+    #main-logo{
+        margin-left: 3em;
+    }
+    .nava{
+        opacity: 1;
+        display: block;
+    }
+    .home{
+        display: block;
+        margin-top: 10em;
+    }
+    .johndoe{
+        display: block;
+        margin-left: 15.4em;
+        margin-top: 50px;
+    }
+    .logout{
+        display: block;
+        margin-left: 17.8em;
+        margin-top: -4.5em;
+    }
+    #nav{
+        opacity: 0;
+        /* display: none; */
+    }
+    #home{
+        /* display: none; */
+        margin-top: 0em;
+    }
+    #johndoe{
+        /* display: none; */
+        margin-left: 15.4em;
+        margin-top: 50px;
+    }
+    #logout{
+        /* display: none; */
+        margin-left: 17.8em;
+        margin-top: -4.5em;
+    }
+    #add-new-campground{
+        margin-left: 2em;
+        width: 10em;
+        font-weight: 700;
+        font-size: 1.8em;
+        margin-left: 1.7em;
+        line-height: 1.3em;
+        margin-top: 1.5em;
+    }
+    #campground-name{
+        margin-left: 2.8em;
+        margin-top: 1em;
+        font-weight: 500;
+    }
+    #campground-name-input{
+        margin-left: 3em;
+        width: 20em;
+    }
+    #price{
+        margin-left: 2.8em;
+        margin-top: 1em;
+        font-weight: 500;
+    }
+    #price-input{
+        margin-left: 3em;
+        width: 20em;
+    }
+    #image{
+        margin-left: 2.8em;
+        margin-top: 1em;
+        font-weight: 500;
+    }
+    #image-input{
+        margin-left: 3em;
+        width: 20em;
+    }
+    #description{
+        margin-left: 2.8em;
+        margin-top: 1em;
+        font-weight: 500;
+    }
+    #description-input{
+        margin-left: 3em;
+        width: 20em;
+    }
+    #create-campground-button{
+        margin-left: 2.8em;
+        width: 18em;
+    }
+    #main-logo-2{
+        margin-left: 3em;
+    }
+    #hamMenu{
+        margin-left: 10.8em;
+        margin-top: 2.5em;
+    }
 }
